--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   const sendBtn = document.getElementById('send-btn');
 
   // Put your OpenAI API key here
-  const OPENAI_API_KEY = "YOUR_OPENAI_API_KEY";
+  const OPENAI_API_KEY = "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";
 
   // Conversation history for context
   const conversation = [
