--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
-          'Authorization': `Bearer ${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}`,
+           'Authorization': `Bearer ${OPENAI_API_KEY}`,
         },
         body: JSON.stringify({
           model: "gpt-3.5-turbo",
