--- a/index.html
+++ b/index.html
@@ -1,187 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Divin DRF Robo Q&A Session</title>
-<style>
-  body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0; padding: 0;
-    background: #f0f8ff;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-  header {
-    background: #003366;
-    color: white;
-    padding: 1rem;
-    text-align: center;
-    font-size: 1.4rem;
-    font-weight: 700;
-  }
-  #chat-container {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    max-width: 600px;
-    margin: auto;
-    padding: 1rem;
-    gap: 0.75rem;
-  }
-  #messages {
-    flex: 1;
-    background: white;
-    border-radius: 8px;
-    padding: 1rem;
-    overflow-y: auto;
-    box-shadow: 0 0 10px rgb(0 51 102 / 0.15);
-  }
-  .message {
-    margin-bottom: 1rem;
-    line-height: 1.4;
-  }
-  .message.user {
-    text-align: right;
-    color: #003366;
-    font-weight: 600;
-  }
-  .message.bot {
-    text-align: left;
-    background: #e6f2ff;
-    padding: 0.6rem 1rem;
-    border-radius: 12px;
-    color: #003366;
-    max-width: 85%;
-  }
-  #input-container {
-    display: flex;
-    margin-top: 0.5rem;
-    max-width: 600px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  #user-input {
-    flex: 1;
-    font-size: 1rem;
-    padding: 0.75rem 1rem;
-    border-radius: 25px 0 0 25px;
-    border: 2px solid #003366;
-    outline: none;
-  }
-  #send-btn {
-    background: #003366;
-    color: white;
-    border: none;
-    border-radius: 0 25px 25px 0;
-    padding: 0 1.5rem;
-    font-size: 1.1rem;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  #send-btn:hover:not(:disabled) {
-    background: #0055cc;
-  }
-  #send-btn:disabled {
-    background: #999999;
-    cursor: not-allowed;
-  }
-  @media (max-width: 640px) {
-    #chat-container {
-      padding: 0.5rem;
-      max-width: 100%;
-    }
-    #send-btn {
-      padding: 0 1rem;
-      font-size: 1rem;
-    }
-  }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Divine DRF Robo Protocol</title>
+  <link rel="stylesheet" href="style/main.css">
+  <script defer src="script/main.js"></script>
 </head>
 <body>
-<header>Divin DRF Robo Q&A Session</header>
+  <header>
+    <h1>🤖 Divine DRF Robo Protocol</h1>
+    <p>Techno-Tawheed • Justice • Financial Sovereignty • Quranic Guidance</p>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="chatbot.html">Chatbot</a>
+      <a href="quran.html">Quran</a>
+      <a href="wallet.html">Wallet</a>
+      <a href="social.html">Social</a>
+      <a href="pledge.html">Pledge</a>
+      <a href="feed.html">Alerts</a>
+    </nav>
+  </header>
 
-<div id="chat-container">
-  <div id="messages"></div>
+  <main>
+    <section>
+      <h2>Welcome to the Future of Ethical Tech</h2>
+      <p>
+        The Divine DRF Robo Protocol is a decentralized framework combining
+        Islamic guidance, financial tools, and social interaction — built on
+        faith, justice, and open-source technology.
+      </p>
+      <ul>
+        <li>☪️ Quranic AI & Da’wah Chatbot</li>
+        <li>💸 DRF Wallet & Halal Finance</li>
+        <li>🌐 Ethical Social Media Network</li>
+        <li>📢 Scam & Corruption Alert Feed</li>
+      </ul>
+    </section>
 
-  <form id="input-container">
-    <input type="text" id="user-input" placeholder="Ask your question about Islam or DRF..." autocomplete="off" required />
-    <button type="submit" id="send-btn">Send</button>
-  </form>
-</div>
+    <section>
+      <h3>Protocol Pillars</h3>
+      <ol>
+        <li>🕋 Tawheed over Technology</li>
+        <li>🛡️ Justice over Corruption</li>
+        <li>🧠 Wisdom over Algorithms</li>
+        <li>🪙 DRF Sovereign Financial System</li>
+      </ol>
+    </section>
+  </main>
 
-<script>
-  const messagesDiv = document.getElementById('messages');
-  const userInput = document.getElementById('user-input');
-  const sendBtn = document.getElementById('send-btn');
-
-  // Put your OpenAI API key here
-  const OPENAI_API_KEY = "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";
-
-  // Conversation history for context
-  const conversation = [
-    { role: "system", content: "You are Divin DRF Robo, an Islamic Q&A assistant. Answer clearly and respectfully." }
-  ];
-
-  // Append message to chat window
-  function appendMessage(text, sender) {
-    const div = document.createElement('div');
-    div.className = 'message ' + sender;
-    div.textContent = text;
-    messagesDiv.appendChild(div);
-    messagesDiv.scrollTop = messagesDiv.scrollHeight;
-  }
-
-  // Handle form submit
-  document.getElementById('input-container').addEventListener('submit', async e => {
-    e.preventDefault();
-    const question = userInput.value.trim();
-    if (!question) return;
-
-    appendMessage(question, 'user');
-    userInput.value = '';
-    sendBtn.disabled = true;
-
-    // Add user message to conversation
-    conversation.push({ role: "user", content: question });
-
-    try {
-      const response = await fetch('https://api.openai.com/v1/chat/completions', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-           'Authorization': `Bearer ${OPENAI_API_KEY}`,
-        },
-        body: JSON.stringify({
-          model: "gpt-3.5-turbo",
-          messages: conversation,
-          max_tokens: 300,
-          temperature: 0.7,
-        }),
-      });
-
-      if (!response.ok) {
-        const errorData = await response.json();
-        appendMessage("Error from OpenAI: " + errorData.error.message, 'bot');
-      } else {
-        const data = await response.json();
-        const botMessage = data.choices[0].message.content.trim();
-        appendMessage(botMessage, 'bot');
-
-        // Add bot reply to conversation
-        conversation.push({ role: "assistant", content: botMessage });
-      }
-    } catch (err) {
-      appendMessage("Network or API error: " + err.message, 'bot');
-    } finally {
-      sendBtn.disabled = false;
-      userInput.focus();
-    }
-  });
-
-  // Focus input on page load
-  userInput.focus();
-</script>
+  <footer>
+    <p>&copy; 2025 Divine DRF Protocol. Guided by Truth.</p>
+  </footer>
 </body>
 </html>
