--- a/index.html
+++ b/index.html
@@ -1,56 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Divine DRF Robo Protocol</title>
-  <link rel="stylesheet" href="style/main.css">
-  <script defer src="script/main.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Divine DRF Robo</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>🤖 Divine DRF Robo Protocol</h1>
-    <p>Techno-Tawheed • Justice • Financial Sovereignty • Quranic Guidance</p>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="chatbot.html">Chatbot</a>
-      <a href="quran.html">Quran</a>
-      <a href="wallet.html">Wallet</a>
-      <a href="social.html">Social</a>
-      <a href="pledge.html">Pledge</a>
-      <a href="feed.html">Alerts</a>
-    </nav>
-  </header>
+  <div id="scene-container"></div>
+  <div id="overlay">
+    <h1>🤖 Divine DRF Robo</h1>
+    <p>Guiding with Truth | Powered by Techno-Tawheed Protocol</p>
+  </div>
 
-  <main>
-    <section>
-      <h2>Welcome to the Future of Ethical Tech</h2>
-      <p>
-        The Divine DRF Robo Protocol is a decentralized framework combining
-        Islamic guidance, financial tools, and social interaction — built on
-        faith, justice, and open-source technology.
-      </p>
-      <ul>
-        <li>☪️ Quranic AI & Da’wah Chatbot</li>
-        <li>💸 DRF Wallet & Halal Finance</li>
-        <li>🌐 Ethical Social Media Network</li>
-        <li>📢 Scam & Corruption Alert Feed</li>
-      </ul>
-    </section>
-
-    <section>
-      <h3>Protocol Pillars</h3>
-      <ol>
-        <li>🕋 Tawheed over Technology</li>
-        <li>🛡️ Justice over Corruption</li>
-        <li>🧠 Wisdom over Algorithms</li>
-        <li>🪙 DRF Sovereign Financial System</li>
-      </ol>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Divine DRF Protocol. Guided by Truth.</p>
-  </footer>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
