--- a/index.html
+++ b/index.html
@@ -1,25 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>DRF Social</title>
-  <link rel="stylesheet" href="style.css" />
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Claim Your $10 Free on Gate.io!</title>
+<style>
+  /* Reset & base */
+  * {
+    margin: 0; padding: 0; box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+  body {
+    background: #0f2027;  /* gradient blue/teal */
+    background: linear-gradient(135deg, #2c5364, #203a43, #0f2027);
+    color: #fff;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    text-align: center;
+  }
+  h1 {
+    font-size: 2.5rem;
+    margin-bottom: 0.3em;
+    letter-spacing: 1px;
+    text-shadow: 0 0 10px #00ffc8;
+  }
+  p.lead {
+    font-size: 1.25rem;
+    margin-bottom: 1.5em;
+    max-width: 360px;
+    line-height: 1.4;
+    text-shadow: 0 0 6px #00ffc8;
+  }
+  a.button {
+    display: inline-block;
+    background: #00ffc8;
+    color: #00332f;
+    font-weight: 700;
+    text-decoration: none;
+    padding: 15px 40px;
+    border-radius: 50px;
+    box-shadow: 0 0 15px #00ffc8aa;
+    transition: background 0.3s ease, box-shadow 0.3s ease;
+    font-size: 1.3rem;
+  }
+  a.button:hover {
+    background: #00bfa3;
+    box-shadow: 0 0 25px #00bfa3cc;
+  }
+  .info {
+    margin-top: 30px;
+    font-size: 0.9rem;
+    color: #a0f0dc;
+    max-width: 320px;
+  }
+  footer {
+    margin-top: 40px;
+    font-size: 0.8rem;
+    color: #00765d99;
+  }
+  @media (max-width: 400px) {
+    h1 { font-size: 2rem; }
+    a.button { padding: 12px 28px; font-size: 1.1rem; }
+  }
+</style>
 </head>
 <body>
-  <div class="container">
-    <h1>📸 DRF Social Feed</h1>
 
-    <form id="postForm">
-      <input type="text" id="caption" placeholder="Write a caption..." required />
-      <input type="text" id="wallet" placeholder="Your DRF Wallet Address" required />
-      <input type="file" id="mediaFile" accept="image/*,video/*" required />
-      <button type="submit">Post</button>
-    </form>
+<h1>Get $10 Free on Gate.io!</h1>
+<p class="lead">Check out Gate and join me to claim the invitation benefits! Sign up now and get your $10 welcome bonus.</p>
 
-    <div id="feed"></div>
-  </div>
+<a href="https://www.gate.com/signup/VVFGUGWNAA?ref_type=103&utm_cmp=PEYEQdSb" target="_blank" rel="noopener" class="button" aria-label="Join Gate.io and claim $10 bonus">Claim Your $10 Bonus</a>
 
-  <script type="module" src="app.js"></script>
+<p class="info">
+  • No hidden fees • 100% Safe & Secure • Trusted by millions worldwide
+</p>
+
+<footer>© 2025 Powered by Your Crypto Hustle</footer>
+
 </body>
 </html>
