--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<link rel="manifest" href="manifest.json" />
+<meta name="theme-color" content="#00ffc8" />
+
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
